--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
         </div>
         </div>
 
-        <audio id="audiohome" src="SnowFlowerfeatPeakboy.mp3"></audio>
+        <audio #audioPlayer class="player__audio" [src]="file"></audio>
     
     <div class="audiohome container-center  ">
         <div class="audio-player">
