--- a/src/app/letter/letter.component.html
+++ b/src/app/letter/letter.component.html
@@ -10,7 +10,7 @@
       <div  class="valentine-congrats">
       <h1>¡Felicidades!</h1>
       <p>Has aceptado ser mi cita. Hermosaaa 💕</p>
-      <img src="https://media4.giphy.com/media/n0IKF3qkeh671VAO45/giphy.gif" alt="congrats" />
+      <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDdtcWRwdDgwd2ZxNnJuaTc1aXJ2bWdycTRmejE1OXVmYTduaTl1cyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/5uf4oP2SSFW99bVTyY/giphy.gif" alt="congrats" />
       </div>
     }@else if (showSad) {
       <div class="valentine-sad">
